# Yuri-Rewrite

./: .env.browser  .gitignore  AGENTS.md  README.md  clean-debug-cache.ps1  index.html  package-lock.json  package.json  vite.config.ts
scripts/: package-portable-fresh.ps1  package-portable.ps1  release-check.ps1  verify.ps1
src/: App.test.tsx  App.tsx  main.tsx  styles.css  tauriApi.ts  useAutoRunProgress.test.ts  useAutoRunProgress.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: credentials.rs  domain.rs  lib.rs  main.rs  model_support.rs  rate_limit.rs  task_control.rs
src-tauri/src/ai/: anthropic.rs  common.rs  gemini.rs  mod.rs  openai.rs  parsing.rs  prompts.rs
src-tauri/src/commands/: analysis.rs  auto_run.rs  chapter_rules.rs  export.rs  frontend_errors.rs  jobs.rs  logs.rs  mod.rs  models.rs  novels.rs  rewrite.rs  settings.rs  updates.rs  workspace.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/repositories/: chapters.rs  jobs.rs  logs.rs  mod.rs
src-tauri/src/services/: analysis.rs  estimation.rs  mod.rs  progress.rs  repair.rs  review.rs  rewrite.rs  shard_context.rs  validation.rs
src-tauri/src/text/: chapter_split.rs  encoding.rs  mod.rs
src/components/Compare/: CompareView.test.tsx  CompareView.tsx  HighlightedText.tsx  compareDiff.test.ts  compareDiff.ts  compareDiff.worker.ts  compareDiffCache.ts  compareQuality.test.ts  compareQuality.ts  compareSearch.test.ts  compareSearch.ts
src/components/Settings/: AppSettings.tsx  ModelProfiles.tsx  NovelSettings.test.tsx  NovelSettings.tsx  additionalNameMappings.ts  relationshipTargets.ts  (+1 more)
src/config/: modelProfileDisplay.ts  modelRecommendations.test.ts  modelRecommendations.ts
src/hooks/: useModelProfiles.ts  useNotice.ts  useNovels.ts  useTaskState.ts
src/platform/: browserMock.test.ts  browserMock.ts  runtime.ts
src/store/: appStore.ts
src/test/: setup.ts
src/types/: index.ts
(+23 files in other folders)
